--- a/src/views/IssueBook.form
+++ b/src/views/IssueBook.form
@@ -332,7 +332,7 @@
         <Component class="rojerusan.RSMaterialButtonRectangle" name="submitButton">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ea" green="88" red="64" type="rgb"/>
+              <Color blue="0" green="ff" red="0" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Cho m&#x1b0;&#x1ee3;n"/>
             <Property name="enabled" type="boolean" value="false"/>
