--- a/src/views/ReturnBook.form
+++ b/src/views/ReturnBook.form
@@ -466,7 +466,7 @@
         <Component class="rojerusan.RSMaterialButtonRectangle" name="submitButton">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ea" green="88" red="64" type="rgb"/>
+              <Color blue="0" green="ff" red="0" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Ho&#xe0;n t&#x1ea5;t"/>
             <Property name="enabled" type="boolean" value="false"/>
